Fix offer page title clipping on tablet and desktop right margin.
Raise site-content offset on tablet widths, stop clipping the mobile h1, and use margin-right for the desktop content container.

--- a/assets/src/scss/base/_base.scss
+++ b/assets/src/scss/base/_base.scss
@@ -152,6 +152,10 @@ section {
 
   @include mixins.max-ipad-pro-screen {
     margin-top: 80px;
+
+    @include mixins.ipad-air-screen {
+      margin-top: 118px;
+    }
   }
 }
 
